internal/xds/translator/testdata/out/xds-ir/grpc-route-stream-timeout.routes.yaml
- ignorePortInHostMatching: true
  name: grpc-listener
  virtualHosts:
  - domains:
    - '*'
    name: grpc-listener/*
    routes:
    - match:
        prefix: /
      name: grpc-route-with-stream-timeout
      route:
        cluster: grpc-route-with-only-stream-timeout-dest
        maxStreamDuration:
          maxStreamDuration: 45s
    - match:
        prefix: /
      name: grpc-route-with-0s-stream-timeout
      route:
        cluster: grpc-route-with-0s-stream-timeout-dest
        maxStreamDuration:
          maxStreamDuration: 0s
